[package]
name = "password"
version = "0.1.0"
authors = ["Axel Nilsson <theaxelnilsson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "safe"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
rust-argon2 = "0.8"
base64 = "0.13"
aes-gcm = "0.8"
serde = "1.0.118"
serde_json = "1.0"
